--- a/mudo.html
+++ b/mudo.html
@@ -75,25 +75,13 @@
     let mapLoaded = false;
     mapboxgl.clearStorage();
 
-    const loadMap = () => {
-      const isMobile = window.innerWidth < 900;
-      const map = new ElectionMap('pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q', {
-        container: 'map-container',
-        style: 'mapbox://styles/fserrey/clvzbin6902a801qre8os64qn', 
-        source: 'mapbox://fserrey.electionscat2021_adm4?fresh=true',       
-        sourceLayer: 'electionscat2021_adm4',
-        center: [1.55, 41.82],
-        zoom: isMobile ? 6 : 7.5,
-        minZoom: isMobile ? 6 : 7,
-        initialSelect: 'winner2024',
-        // hash: true,
-        scrollZoom: true,
-        years: [2021, 2024],
-        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDCAT','UP','CUP','COMUNS', 'SUMAR', 'VOX'],
-        partyColors: window._partyColors,
-      });
-      mapLoaded = true;
-    }
+    mapboxgl.accessToken = 'pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q';
+    const map = new mapboxgl.Map({
+      container: 'map-container',
+      style: 'mapbox://styles/fserrey/clvzbin6902a801qre8os64qn', 
+      center: [1.55, 41.82], // Coordinates of the center of the map
+      zoom: 7.5 // Adjust the zoom level as needed
+    });
 
     // Remove Mapbox service worker cache
     if (caches && caches.keys()) {
