--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv='cache-control' content='no-cache'>
   <meta http-equiv='expires' content='0'>
   <meta http-equiv='pragma' content='no-cache'>
-  <title>Elecciones Parlamento Catalunya 2024 - La Vanguardia</title>
+  <title>Elecciones Parlamento Catalunya 2024 - Municipios - La Vanguardia</title>
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet" type="text/css"/>
   <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.min.js"></script>
@@ -29,7 +29,7 @@
         </div>
         <div class="map-controls-fill">
           <button class="map-control map-control--fill js-control is-active" data-fill="winner">Ganador</button>
-          <button class="map-control map-control--fill js-control" data-fill="CUP">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP-G">CUP</button>
           <button class="map-control map-control--fill js-control" data-fill="JXCAT">JxCAT</button>
           <button class="map-control map-control--fill js-control" data-fill="PSC">PSC</button>
           <button class="map-control map-control--fill js-control" data-fill="PP">PP</button>
@@ -82,13 +82,13 @@
         source: 'mapbox://fserrey.electionscat2021_adm4?fresh=true',       
         sourceLayer: 'electionscat2021_adm4',
         center: [1.55, 41.82],
-        zoom: isMobile ? 8 : 8.5,
+        zoom: isMobile ? 7 : 8,
         minZoom: isMobile ? 5.5 : 6,
         initialSelect: 'winner2024',
         // hash: true,
         scrollZoom: true,
         years: [2021, 2024],
-        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDCAT','UP','CUP','COMUNS', 'SUMAR', 'VOX'],
+        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDCAT','UP','CUP-G','COMUNS', 'SUMAR', 'VOX'],
         partyColors: window._partyColors,
       });
       mapLoaded = true;
