--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="map-controls-fill">
           <button class="map-control map-control--fill js-control is-active" data-fill="winner">Ganador</button>
-          <button class="map-control map-control--fill js-control" data-fill="CUP-G">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP">CUP-G</button>
           <button class="map-control map-control--fill js-control" data-fill="JXCAT">JxCAT</button>
           <button class="map-control map-control--fill js-control" data-fill="PSC">PSC</button>
           <button class="map-control map-control--fill js-control" data-fill="PP">PP</button>
@@ -78,7 +78,7 @@
       const isMobile = window.innerWidth < 900;
       const map = new ElectionMap('pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q', {
         container: 'map-container',
-        style: 'mapbox://styles/laur05/clv6v11hs00mc01oc38ss9aqk?fresh=true', 
+        style: 'mapbox://styles/laur05/clvzejo7w014w01qu65sg9uau', 
         source: 'mapbox://fserrey.electionscat2021_adm4?fresh=true',       
         sourceLayer: 'electionscat2021_adm4',
         center: [1.55, 41.82],
@@ -88,7 +88,7 @@
         // hash: true,
         scrollZoom: true,
         years: [2021, 2024],
-        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDCAT','UP','CUP-G','COMUNS', 'SUMAR', 'VOX'],
+        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDCAT','UP','CUP','COMUNS', 'SUMAR', 'VOX'],
         partyColors: window._partyColors,
       });
       mapLoaded = true;
