--- a/mudo.html
+++ b/mudo.html
@@ -7,7 +7,7 @@
   <meta http-equiv='cache-control' content='no-cache'>
   <meta http-equiv='expires' content='0'>
   <meta http-equiv='pragma' content='no-cache'>
-  <title>Elecciones Parlamento Catalunya 2024 - La Vanguardia</title>
+  <title>Elecciones Parlamento Catalunya 2024 - Municipios - La Vanguardia</title>
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet" type="text/css"/>
   <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.min.js"></script>
@@ -17,7 +17,6 @@
 <body>
   <div class="map-wrapper">
     <div id="map-container"></div>
-    
 
     <!-- map controls -->
     <div id="custom-controls" class="map-overflow map-controls hidden">
@@ -30,7 +29,7 @@
         </div>
         <div class="map-controls-fill">
           <button class="map-control map-control--fill js-control is-active" data-fill="winner">Ganador</button>
-          <button class="map-control map-control--fill js-control" data-fill="CUP">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP">CUP-G</button>
           <button class="map-control map-control--fill js-control" data-fill="JXCAT">JxCAT</button>
           <button class="map-control map-control--fill js-control" data-fill="PSC">PSC</button>
           <button class="map-control map-control--fill js-control" data-fill="PP">PP</button>
@@ -75,13 +74,25 @@
     let mapLoaded = false;
     mapboxgl.clearStorage();
 
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q';
-    const map = new mapboxgl.Map({
-      container: 'map-container',
-      style: 'mapbox://styles/fserrey/clvzbin6902a801qre8os64qn', 
-      center: [1.55, 41.82], // Coordinates of the center of the map
-      zoom: 7.5 // Adjust the zoom level as needed
-    });
+    const loadMap = () => {
+      const isMobile = window.innerWidth < 900;
+      const map = new ElectionMap('pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q', {
+        container: 'map-container',
+        style: 'mapbox://styles/laur05/clvzejo7w014w01qu65sg9uau', 
+        source: 'mapbox://fserrey.electionscat2021_adm4?fresh=true',       
+        sourceLayer: 'electionscat2021_adm4',
+        center: [1.55, 41.82],
+        zoom: isMobile ? 7 : 8,
+        minZoom: isMobile ? 5.5 : 6,
+        initialSelect: 'winner2024',
+        // hash: true,
+        scrollZoom: true,
+        years: [2021, 2024],
+        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDCAT','UP','CUP','COMUNS', 'SUMAR', 'VOX'],
+        partyColors: window._partyColors,
+      });
+      mapLoaded = true;
+    }
 
     // Remove Mapbox service worker cache
     if (caches && caches.keys()) {
