--- a/mudo.html
+++ b/mudo.html
@@ -29,7 +29,7 @@
         </div>
         <div class="map-controls-fill">
           <button class="map-control map-control--fill js-control is-active" data-fill="winner">Ganador</button>
-          <button class="map-control map-control--fill js-control" data-fill="CUP">CUP-G</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP">CUP</button>
           <button class="map-control map-control--fill js-control" data-fill="JXCAT">JxCAT</button>
           <button class="map-control map-control--fill js-control" data-fill="PSC">PSC</button>
           <button class="map-control map-control--fill js-control" data-fill="PP">PP</button>
