--- a/mudo.html
+++ b/mudo.html
@@ -28,22 +28,40 @@
           <!-- <button class="map-control map-control--year js-year" data-year="diff">Diff</button> -->
         </div>
         <div class="map-controls-fill">
+          <!-- Botones para 2024 -->
+          <button class="map-control map-control--fill js-control" data-fill="PSC" data-year="2024">PSC</button>
+          <button class="map-control map-control--fill js-control" data-fill="ERC" data-year="2024">ERC</button>
+          <button class="map-control map-control--fill js-control" data-fill="JXCAT" data-year="2024">JUNTS</button>
+          <button class="map-control map-control--fill js-control" data-fill="VOX" data-year="2024">VOX</button>
+          <button class="map-control map-control--fill js-control" data-fill="SUMAR" data-year="2024">SUMAR</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP" data-year="2024">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="CS" data-year="2024">CS</button>
+          <button class="map-control map-control--fill js-control" data-fill="PP" data-year="2024">PP</button>
+          
+          <!-- Botones para 2021 -->
+          <button class="map-control map-control--fill js-control" data-fill="PSC" data-year="2021">PSC</button>
+          <button class="map-control map-control--fill js-control" data-fill="ERC" data-year="2021">ERC</button>
+          <button class="map-control map-control--fill js-control" data-fill="JXCAT" data-year="2021">JUNTS</button>
+          <button class="map-control map-control--fill js-control" data-fill="VOX" data-year="2021">VOX</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP" data-year="2021">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="CS" data-year="2021">CS</button>
+          <button class="map-control map-control--fill js-control" data-fill="PP" data-year="2021">PP</button>
+          <button class="map-control map-control--fill js-control" data-fill="ECP" data-year="2021">ECP</button>
+        <!--
           <button class="map-control map-control--fill js-control is-active" data-fill="winner">Ganador</button>
-          <button class="map-control map-control--fill js-control" data-fill="CUP">CUP</button>
-          <button class="map-control map-control--fill js-control" data-fill="JXCAT">JxCAT</button>
           <button class="map-control map-control--fill js-control" data-fill="PSC">PSC</button>
-          <button class="map-control map-control--fill js-control" data-fill="PP">PP</button>
-          <button class="map-control map-control--fill js-control" data-fill="Sumar">Sumar</button>
-          <button class="map-control map-control--fill js-control" data-fill="VOX">Vox</button>
-          <button class="map-control map-control--fill js-control" data-fill="UP">Podemos</button>
           <button class="map-control map-control--fill js-control" data-fill="ERC">ERC</button>
+          <button class="map-control map-control--fill js-control" data-fill="JXCAT">JUNTS</button>
+          <button class="map-control map-control--fill js-control" data-fill="VOX">VOX</button>
+          
+          <button class="map-control map-control--fill js-control" data-fill="CUP">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="Sumar">SUMAR</button>
 
+          <button class="map-control map-control--fill js-control" data-fill="UP">ECP</button>
 
+          <button class="map-control map-control--fill js-control" data-fill="PP">PP</button>
 
           <button class="map-control map-control--fill js-control" data-fill="Bloques">Bloques</button>
-          <!--
-          <button class="map-control map-control--fill js-control" data-fill="UP">Podemos</button>
-          <button class="map-control map-control--fill js-control" data-fill="Sumar">Sumar</button>
           //-->
         </div>
       </div>
