--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
   <div class="map-wrapper">
     <div id="map-container"></div>
-
     <!-- map controls -->
     <div id="custom-controls" class="map-overflow map-controls hidden">
       <div class="map-overflow-wrap">
@@ -25,26 +24,26 @@
         <div class="map-controls-years">
           <button class="map-control map-control--year js-year is-active" data-year="2024">2024</button>
           <button class="map-control map-control--year js-year" data-year="2021">2021</button>
-          <!-- <button class="map-control map-control--year js-year" data-year="diff">Diff</button> -->
         </div>
         <div class="map-controls-fill">
-          <button class="map-control map-control--fill js-control is-active" data-fill="winner">Ganador</button>
-          <button class="map-control map-control--fill js-control" data-fill="CUP">CUP</button>
-          <button class="map-control map-control--fill js-control" data-fill="JXCAT">JxCAT</button>
-          <button class="map-control map-control--fill js-control" data-fill="PSC">PSC</button>
-          <button class="map-control map-control--fill js-control" data-fill="PP">PP</button>
-          <button class="map-control map-control--fill js-control" data-fill="Sumar">Sumar</button>
-          <button class="map-control map-control--fill js-control" data-fill="VOX">Vox</button>
-          <button class="map-control map-control--fill js-control" data-fill="UP">Podemos</button>
-          <button class="map-control map-control--fill js-control" data-fill="ERC">ERC</button>
-
-
-
-          <button class="map-control map-control--fill js-control" data-fill="Bloques">Bloques</button>
-          <!--
-          <button class="map-control map-control--fill js-control" data-fill="UP">Podemos</button>
-          <button class="map-control map-control--fill js-control" data-fill="Sumar">Sumar</button>
-          //-->
+          <!-- Botones para 2024 -->
+          <button class="map-control map-control--fill js-control" data-fill="PSC" data-year="2024">PSC</button>
+          <button class="map-control map-control--fill js-control" data-fill="ERC" data-year="2024">ERC</button>
+          <button class="map-control map-control--fill js-control" data-fill="JXCAT" data-year="2024">JUNTS</button>
+          <button class="map-control map-control--fill js-control" data-fill="VOX" data-year="2024">VOX</button>
+          <button class="map-control map-control--fill js-control" data-fill="SUMAR" data-year="2024">SUMAR</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP" data-year="2024">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="CS" data-year="2024">CS</button>
+          <button class="map-control map-control--fill js-control" data-fill="PP" data-year="2024">PP</button>
+          <!-- Botones para 2021 -->
+          <button class="map-control map-control--fill js-control" data-fill="PSC" data-year="2021">PSC</button>
+          <button class="map-control map-control--fill js-control" data-fill="ERC" data-year="2021">ERC</button>
+          <button class="map-control map-control--fill js-control" data-fill="JXCAT" data-year="2021">JUNTS</button>
+          <button class="map-control map-control--fill js-control" data-fill="VOX" data-year="2021">VOX</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP" data-year="2021">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="CS" data-year="2021">CS</button>
+          <button class="map-control map-control--fill js-control" data-fill="PP" data-year="2021">PP</button>
+          <button class="map-control map-control--fill js-control" data-fill="ECP" data-year="2021">ECP</button>
         </div>
       </div>
     </div>
@@ -66,17 +65,35 @@
       </div>
     </div>
     <!-- end legend -->
-
   </div>
   <script src="./map.js"></script>
   <script src="./partyColors.js"></script>
   <script>
-    let mapLoaded = false;
-    mapboxgl.clearStorage();
+    document.addEventListener('DOMContentLoaded', function() {
+      const yearButtons = document.querySelectorAll('.js-year');
+      const fillButtons = document.querySelectorAll('.map-control--fill');
 
-    const loadMap = () => {
-      const isMobile = window.innerWidth < 900;
-      const map = new ElectionMap('pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q', {
+      function updateButtonsByYear(selectedYear) {
+        fillButtons.forEach(button => {
+          button.style.display = button.dataset.year === selectedYear ? 'inline-block' : 'none';
+        });
+      }
+
+      yearButtons.forEach(button => {
+        button.addEventListener('click', function() {
+          console.log('Year button clicked:', this.dataset.year);
+          yearButtons.forEach(btn => btn.classList.remove('is-active'));
+          this.classList.add('is-active');
+          updateButtonsByYear(this.dataset.year);
+        });
+      });
+
+      const initialYear = document.querySelector('.js-year.is-active').dataset.year;
+      updateButtonsByYear(initialYear);
+
+      function loadMap() {
+        const isMobile = window.innerWidth < 900;
+        const map = new ElectionMap('pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q', {
         container: 'map-container',
         style: 'mapbox://styles/laur05/clvzejo7w014w01qu65sg9uau', 
         source: 'mapbox://fserrey.electionscat2021_adm4?fresh=true',       
@@ -88,26 +105,13 @@
         // hash: true,
         scrollZoom: true,
         years: [2021, 2024],
-        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDCAT','UP','CUP','COMUNS', 'SUMAR', 'VOX'],
-        partyColors: window._partyColors,
-      });
-      mapLoaded = true;
-    }
+          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'PDCAT', 'ECP', 'CUP', 'COMUNS', 'SUMAR', 'VOX'],
+          partyColors: window._partyColors,
+        });
+      }
 
-    // Remove Mapbox service worker cache
-    if (caches && caches.keys()) {
-      caches.keys().then((keys) => {
-        Promise.all(keys.filter((k) => k === 'mapbox-tiles').map((k) => caches.delete(k)))
-          .then(() => { loadMap() })
-          .catch(() => { loadMap() });
-      })
-    } else loadMap();
-
-    // Fallback if map has not been loaded
-    setTimeout(() => {
-      if (!mapLoaded) loadMap();
-    }, 4000);
-    
+      loadMap();
+    });
   </script>
 </body>
 </html>
