PDdCAT color fix

--- a/adm7.html
+++ b/adm7.html
@@ -92,7 +92,7 @@
         // hash: true,
         scrollZoom: true,
         years: [2021, 2024],
-        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDCAT','UP','CUP','COMUNS', 'SUMAR', 'VOX'],
+        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDECAT','UP','CUP','COMUNS', 'SUMAR', 'VOX'],
         partyColors: window._partyColors,
       });
       mapLoaded = true;
