--- a/index.html
+++ b/index.html
@@ -8,110 +8,88 @@
   <meta http-equiv='expires' content='0'>
   <meta http-equiv='pragma' content='no-cache'>
   <title>Elecciones Parlamento Catalunya 2024 - Municipios - La Vanguardia</title>
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet" type="text/css"/>
-  <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.min.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
   <link href="./styles.css" rel="stylesheet" type="text/css"/>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
+  <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.min.js"></script>
 </head>
 <body>
   <div class="map-wrapper">
     <div id="map-container"></div>
-    <!-- map controls -->
-    <div id="custom-controls" class="map-overflow map-controls hidden">
+    <div id="custom-controls" class="map-overflow map-controls" style="visibility: visible;"> <!-- Removed hidden class and added inline style for visibility -->
       <div class="map-overflow-wrap">
         <div class="map-controls-hint">Selecciona un mapa:</div>
         <div class="map-controls-years">
-          <button class="map-control map-control--year js-year is-active" data-year="2024">2024</button>
-          <button class="map-control map-control--year js-year" data-year="2021">2021</button>
+          <button class="map-control map-control--year" data-year="2024" onclick="updatePartyButtons(2024)">2024</button>
+          <button class="map-control map-control--year" data-year="2021" onclick="updatePartyButtons(2021)">2021</button>
         </div>
-        <div class="map-controls-fill">
-          <!-- Botones para 2024 -->
-          <button class="map-control map-control--fill js-control" data-fill="PSC" data-year="2024">PSC</button>
-          <button class="map-control map-control--fill js-control" data-fill="ERC" data-year="2024">ERC</button>
-          <button class="map-control map-control--fill js-control" data-fill="JXCAT" data-year="2024">JUNTS</button>
-          <button class="map-control map-control--fill js-control" data-fill="VOX" data-year="2024">VOX</button>
-          <button class="map-control map-control--fill js-control" data-fill="SUMAR" data-year="2024">SUMAR</button>
-          <button class="map-control map-control--fill js-control" data-fill="CUP" data-year="2024">CUP</button>
-          <button class="map-control map-control--fill js-control" data-fill="CS" data-year="2024">CS</button>
-          <button class="map-control map-control--fill js-control" data-fill="PP" data-year="2024">PP</button>
-          <!-- Botones para 2021 -->
-          <button class="map-control map-control--fill js-control" data-fill="PSC" data-year="2021">PSC</button>
-          <button class="map-control map-control--fill js-control" data-fill="ERC" data-year="2021">ERC</button>
-          <button class="map-control map-control--fill js-control" data-fill="JXCAT" data-year="2021">JUNTS</button>
-          <button class="map-control map-control--fill js-control" data-fill="VOX" data-year="2021">VOX</button>
-          <button class="map-control map-control--fill js-control" data-fill="CUP" data-year="2021">CUP</button>
-          <button class="map-control map-control--fill js-control" data-fill="CS" data-year="2021">CS</button>
-          <button class="map-control map-control--fill js-control" data-fill="PP" data-year="2021">PP</button>
-          <button class="map-control map-control--fill js-control" data-fill="ECP" data-year="2021">ECP</button>
-        </div>
+        <div class="map-controls-fill" id="party-controls"></div>
       </div>
     </div>
-    <!-- end map controls -->
-
-    <!-- map zoom out -->
-    <div id="custom-buttons" class="map-overflow map-buttons hidden">
-      <button id="zoom-out" class="zoom-out" title="Zoom out">
-        <img src="img/catalunya.png" alt="Zoom out">
-      </button>
-    </div>
-    <!-- end map zoom out -->
-
-    <!-- legend -->
-    <div id="legends" class="map-legends hidden">
-      <div class="map-legends-wrap">
-        <header id="legends-head" class="map-legends-header"></header>
-        <div id="legends-body" class="map-legends-body"></div>
-      </div>
-    </div>
-    <!-- end legend -->
   </div>
   <script src="./map.js"></script>
   <script src="./partyColors.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      const yearButtons = document.querySelectorAll('.js-year');
-      const fillButtons = document.querySelectorAll('.map-control--fill');
-
-      function updateButtonsByYear(selectedYear) {
-        fillButtons.forEach(button => {
-          button.style.display = button.dataset.year === selectedYear ? 'inline-block' : 'none';
-        });
-      }
-
-      yearButtons.forEach(button => {
-        button.addEventListener('click', function() {
-          console.log('Year button clicked:', this.dataset.year);
-          yearButtons.forEach(btn => btn.classList.remove('is-active'));
-          this.classList.add('is-active');
-          updateButtonsByYear(this.dataset.year);
-        });
-      });
-
-      const initialYear = document.querySelector('.js-year.is-active').dataset.year;
-      updateButtonsByYear(initialYear);
-
-      function loadMap() {
+      let mapLoaded = false;
+      mapboxgl.clearStorage();
+      const loadMap = () => {
         const isMobile = window.innerWidth < 900;
         const map = new ElectionMap('pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q', {
-        container: 'map-container',
-        style: 'mapbox://styles/laur05/clvzejo7w014w01qu65sg9uau', 
-        source: 'mapbox://fserrey.electionscat2021_adm4?fresh=true',       
-        sourceLayer: 'electionscat2021_adm4',
-        center: [1.55, 41.82],
-        zoom: isMobile ? 7 : 8,
-        minZoom: isMobile ? 5.5 : 6,
-        initialSelect: 'winner2024',
-        // hash: true,
-        scrollZoom: true,
-        years: [2021, 2024],
-          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'PDCAT', 'ECP', 'CUP', 'COMUNS', 'SUMAR', 'VOX'],
+          container: 'map-container',
+          style: 'mapbox://styles/laur05/clvzejo7w014w01qu65sg9uau', 
+          source: 'mapbox://fserrey.electionscat2024_adm4?fresh=true',       
+          sourceLayer: 'electionscat2024_adm4',
+          center: [1.55, 41.82],
+          zoom: isMobile ? 7 : 8,
+          minZoom: isMobile ? 5.5 : 6,
+          initialSelect: 'winner2024',
+          // hash: true,
+          scrollZoom: true,
+          years: [2021, 2024],
+          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDECAT','UP','CUP','COMUNS', 'SUMAR', 'VOX'],
           partyColors: window._partyColors,
-        });
-      }
+      });
+      mapLoaded = true;
+      };
+      loadMap(); // Load the map immediately after defining
 
-      loadMap();
+      const partyData = {
+        2024: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'CUP', 'Sumar', 'UP', 'PP'],
+        2021: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'CUP', 'PP']
+      };
+
+      window.updatePartyButtons = function(year) {
+    const container = document.getElementById('party-controls');
+    container.innerHTML = ''; // Clear existing buttons
+
+    partyData[year].forEach(party => {
+      let button = document.createElement('button');
+      button.className = 'map-control map-control--fill js-control';
+      button.dataset.fill = party;
+      button.textContent = party;
+      button.onclick = function() { selectParty(party, year); };
+      container.appendChild(button);
     });
+
+    // Optionally set an 'active' class on the first button
+    if (container.firstChild) {
+      container.firstChild.classList.add('is-active');
+      }
+    };
+
+    function selectParty(party, year) {
+      console.log('Party selected:', party, 'for year:', year);
+      // Implement party selection logic here, for example:
+      // map.setFilter('your-layer', ['==', 'party', party]);
+      // map.setYear(year);
+    }
+
+    // Initialize with the default year
+    updatePartyButtons(2024);
+  });
+</script>
   </script>
 </body>
 </html>
