--- a/index_.html
+++ b/index_.html
@@ -17,8 +17,8 @@
 <body>
   <div class="map-wrapper">
     <div id="map-container"></div>
-    <!-- Map controls -->
-    <div id="custom-controls" class="map-overflow map-controls">
+    <!-- map controls -->
+    <div id="custom-controls" class="map-overflow map-controls hidden">
       <div class="map-overflow-wrap">
         <div class="map-controls-hint">Selecciona un mapa:</div>
         <div class="map-controls-years">
@@ -26,45 +26,91 @@
           <button class="map-control map-control--year js-year" data-year="2021">2021</button>
         </div>
         <div class="map-controls-fill">
-          <!-- Buttons will be dynamically updated based on the year -->
+          <!-- Botones para 2024 -->
+          <button class="map-control map-control--fill js-control" data-fill="PSC" data-year="2024">PSC</button>
+          <button class="map-control map-control--fill js-control" data-fill="ERC" data-year="2024">ERC</button>
+          <button class="map-control map-control--fill js-control" data-fill="JXCAT" data-year="2024">JUNTS</button>
+          <button class="map-control map-control--fill js-control" data-fill="VOX" data-year="2024">VOX</button>
+          <button class="map-control map-control--fill js-control" data-fill="SUMAR" data-year="2024">SUMAR</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP" data-year="2024">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="CS" data-year="2024">CS</button>
+          <button class="map-control map-control--fill js-control" data-fill="PP" data-year="2024">PP</button>
+          <!-- Botones para 2021 -->
+          <button class="map-control map-control--fill js-control" data-fill="PSC" data-year="2021">PSC</button>
+          <button class="map-control map-control--fill js-control" data-fill="ERC" data-year="2021">ERC</button>
+          <button class="map-control map-control--fill js-control" data-fill="JXCAT" data-year="2021">JUNTS</button>
+          <button class="map-control map-control--fill js-control" data-fill="VOX" data-year="2021">VOX</button>
+          <button class="map-control map-control--fill js-control" data-fill="CUP" data-year="2021">CUP</button>
+          <button class="map-control map-control--fill js-control" data-fill="CS" data-year="2021">CS</button>
+          <button class="map-control map-control--fill js-control" data-fill="PP" data-year="2021">PP</button>
+          <button class="map-control map-control--fill js-control" data-fill="ECP" data-year="2021">ECP</button>
         </div>
       </div>
     </div>
-    <!-- Map zoom out -->
-    <div id="custom-buttons" class="map-overflow map-buttons">
+    <!-- end map controls -->
+
+    <!-- map zoom out -->
+    <div id="custom-buttons" class="map-overflow map-buttons hidden">
       <button id="zoom-out" class="zoom-out" title="Zoom out">
         <img src="img/catalunya.png" alt="Zoom out">
       </button>
     </div>
-    <!-- Legend -->
-    <div id="legends" class="map-legends">
+    <!-- end map zoom out -->
+
+    <!-- legend -->
+    <div id="legends" class="map-legends hidden">
       <div class="map-legends-wrap">
         <header id="legends-head" class="map-legends-header"></header>
         <div id="legends-body" class="map-legends-body"></div>
       </div>
     </div>
+    <!-- end legend -->
   </div>
   <script src="./map.js"></script>
   <script src="./partyColors.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      const mapSettings = {
-        accessToken: 'pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q',
+      const yearButtons = document.querySelectorAll('.js-year');
+      const fillButtons = document.querySelectorAll('.map-control--fill');
+
+      function updateButtonsByYear(selectedYear) {
+        fillButtons.forEach(button => {
+          button.style.display = button.dataset.year === selectedYear ? 'inline-block' : 'none';
+        });
+      }
+
+      yearButtons.forEach(button => {
+        button.addEventListener('click', function() {
+          console.log('Year button clicked:', this.dataset.year);
+          yearButtons.forEach(btn => btn.classList.remove('is-active'));
+          this.classList.add('is-active');
+          updateButtonsByYear(this.dataset.year);
+        });
+      });
+
+      const initialYear = document.querySelector('.js-year.is-active').dataset.year;
+      updateButtonsByYear(initialYear);
+
+      function loadMap() {
+        const isMobile = window.innerWidth < 900;
+        const map = new ElectionMap('pk.eyJ1IjoiZnNlcnJleSIsImEiOiJjbHVyNm9uMzEwNDJrMmlxcmllbnk0N2VzIn0.uoB9jWL2GB82Lzv12t4e1Q', {
         container: 'map-container',
-        style: 'mapbox://styles/laur05/clvzejo7w014w01qu65sg9uau',
-        source: 'mapbox://fserrey.electionscat2021_adm4?fresh=true',
+        style: 'mapbox://styles/laur05/clvzejo7w014w01qu65sg9uau', 
+        source: 'mapbox://fserrey.electionscat2021_adm4?fresh=true',       
         sourceLayer: 'electionscat2021_adm4',
         center: [1.55, 41.82],
-        zoom: window.innerWidth < 900 ? 7 : 8,
-        minZoom: window.innerWidth < 900 ? 5.5 : 6,
-        years: ['2021', '2024'],
-        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'PDCAT', 'UP', 'CUP', 'COMUNS', 'SUMAR', 'VOX'],
-        partyColors: window._partyColors, // Ensure this is defined in partyColors.js or within this script
+        zoom: isMobile ? 7 : 8,
+        minZoom: isMobile ? 5.5 : 6,
+        initialSelect: 'winner2024',
+        // hash: true,
         scrollZoom: true,
-      };
+        years: [2021, 2024],
+          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'PDCAT', 'ECP', 'CUP', 'COMUNS', 'SUMAR', 'VOX'],
+          partyColors: window._partyColors,
+        });
+      }
 
-      // Assuming ElectionMap is defined in `map.js`
-      let map = new ElectionMap(mapSettings.accessToken, mapSettings);
+      loadMap();
     });
   </script>
 </body>
