CS added to buttons

--- a/adm7.html
+++ b/adm7.html
@@ -87,8 +87,8 @@
     } else loadMap(); 
 
       const partyData = {
-        2024: ['PSC', 'ERC', 'JXCAT', 'VOX', 'Sumar', 'CUP', 'PP', 'Bloques'],
-        2021: ['PSC', 'ERC', 'JXCAT', 'VOX', 'CUP', 'PP', 'ECP', 'Bloques']
+        2024: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'Sumar', 'CUP', 'CS', 'PP', 'Bloques'],
+        2021: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'ECP', 'CUP', 'CS', 'PP', 'Bloques']
       };
 
       window.updatePartyButtons = function (year) {
