--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       loadMap(); // Load the map immediately after defining
 
       const partyData = {
-        2024: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'Sumar', 'CUP', 'PP', 'Bloques'],
-        2021: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'CUP', 'PP', 'ECP', 'Bloques']
+        2024: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'Sumar', 'CUP', 'CS', 'PP', 'Bloques'],
+        2021: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'ECP', 'CUP', 'CS', 'PP', 'Bloques']
       };
 
       window.updatePartyButtons = function (year) {
