--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           // hash: true,
           scrollZoom: true,
           years: [2021, 2024],
-          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'PDECAT', 'ECP', 'CUP', 'COMUNS', 'SUMAR', 'VOX'],
+          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'PDECAT', 'ECP', 'CUP', 'COMUNS', 'SUMAR', 'VOX', 'winner','ALIANZACAT'],
           partyColors: window._partyColors,
         });
         mapLoaded = true;
@@ -79,20 +79,20 @@
       loadMap(); // Load the map immediately after defining
 
       const partyData = {
-        2024: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'Sumar', 'CUP', 'CS', 'PP'],
-        2021: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'ECP', 'CUP', 'CS', 'PP']
+        2024: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'JXCAT': 'JXCAT', 'VOX': 'VOX', 'Sumar': 'Sumar', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP', 'ALIZANÇA.CAT':'ALIANZACAT' },
+        2021: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'JXCAT': 'JXCAT', 'VOX': 'VOX', 'ECP': 'ECP', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP' }
       };
 
       window.updatePartyButtons = function (year) {
         const container = document.getElementById('party-controls');
         container.innerHTML = ''; // Clear existing buttons
 
-        partyData[year].forEach(party => {
+        Object.entries(partyData[year]).forEach(([displayName, dataValue]) => {
           let button = document.createElement('button');
           button.className = 'map-control map-control--fill js-control';
-          button.dataset.fill = party;
-          button.textContent = party;
-          button.onclick = function () { selectParty(party, year); };
+          button.dataset.fill = dataValue;
+          button.textContent = displayName;
+          button.onclick = function () { selectParty(dataValue, year); };
           container.appendChild(button);
         });
 
@@ -112,8 +112,6 @@
               .then(() => { loadMap() })
               .catch(() => { loadMap() });
           })
-          const yearBtn = document.getElementsByClassName('map-control--year');
-
         } else loadMap();
 
         // Optionally set an 'active' class on the first button
