fix gradient adm7

--- a/adm7.html
+++ b/adm7.html
@@ -71,7 +71,7 @@
         // hash: true,
         scrollZoom: true,
         years: [2021, 2024],
-        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDECAT','UP','ECP','CUP','COMUNS', 'SUMAR', 'VOX', 'winner','ALIANZACAT'],
+        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','PDECAT','UP','ECP','CUP','COMUNS', 'SUMAR', 'VOX','ALIANZACAT'],
         partyColors: window._partyColors,
       });
       mapLoaded = true;
