changes last minute

--- a/adm7.html
+++ b/adm7.html
@@ -72,7 +72,7 @@
           // hash: true,
           scrollZoom: true,
           years: [2021, 2024],
-          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'JUNTSXCAT', 'PDECAT', 'ECP', 'CUP', 'COMUNS', 'SUMAR', 'VOX', 'ALIANZACAT', 'JUNTS'],
+          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'JUNTSXCAT', 'PDECAT', 'ECP', 'CUP', 'COMUNS', 'SUMAR', 'VOX', 'ALIANZACAT', 'JUNTS', 'ECP-PEC', 'UP'],
           partyColors: window._partyColors,
         });
         mapLoaded = true;
@@ -81,7 +81,7 @@
 
       const partyData = {
         2024: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'Junts': 'JXCAT', 'Vox': 'VOX', 'Sumar': 'Sumar', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP', 'Aliança Cat': 'ALIANZACAT' },
-        2021: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'Junts': 'JXCAT', 'Vox': 'VOX', 'ECP': 'ECP', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP' }
+        2021: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'Junts': 'JXCAT', 'Vox': 'VOX', 'ECP': 'UP', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP' }
       };
 
       window.updatePartyButtons = function (year) {
